logs/Slang/generated/hdlconv/hdlconvertor_p527.sv.log
name: hdlconvertor_p527
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p527.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p527.sv:1:1: error: language feature not yet supported
class A;
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p527.sv:10:1: error: use of undeclared identifier 'A'
A a = new();
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p527.sv:10:7: error: language feature not yet supported
A a = new();
      ^~~~~
